--- a/static/index.html
+++ b/static/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
-        <span id="user_username"/>
+        <span id="user_username">@appleseed</span>
         <button>Log Out</button>
     </nav>
     <main>
@@ -18,22 +19,20 @@
         <div id="question_question">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde adipisci, sed soluta laboriosam blanditiis rerum ipsum maxime.
         </div>
-        <div id="question_options">
-            <form action="" method="post">
-                <label>
-                    <input type="radio" name="submission"> Option 1
-                </label>
-                <label>
-                    <input type="radio" name="submission"> Option 2
-                </label>
-                <label>
-                    <input type="radio" name="submission"> Option 3
-                </label>
-                <label>
-                    <input type="radio" name="submission"> Option 4
-                </label>
-            </form>
-        </div>
+        <form action="" method="post" id="question_options">
+            <label>
+                <input type="radio" name="submission"> Option 1 Lorem ipsum dolor sit amet
+            </label>
+            <label>
+                <input type="radio" name="submission"> Option 2 Lorem ipsum dolor sit amet
+            </label>
+            <label>
+                <input type="radio" name="submission"> Option 3 Lorem ipsum dolor sit amet
+            </label>
+            <label>
+                <input type="radio" name="submission"> Option 4 Lorem ipsum dolor sit amet
+            </label>
+        </form>
     </main>
 </body>
 </html>
