[IMP] website layout

--- a/static/index.html
+++ b/static/index.html
@@ -9,12 +9,12 @@
 <body>
     <nav>
         <span id="user_username">@appleseed</span>
+        <span id="user_score">23</span>
         <button>Log Out</button>
     </nav>
     <main>
         <div id="question_details">
-            <span id="question_topic">#trendingtopic</span>
-            <span id="question_type">Trivia</span>
+            <span id="question_topic">#trendingtopic</span> • <span id="question_type">Trivia</span>
         </div>
         <div id="question_question">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde adipisci, sed soluta laboriosam blanditiis rerum ipsum maxime.
