[ADD] web client logic

--- a/static/index.html
+++ b/static/index.html
@@ -19,20 +19,8 @@
         <div id="question_question">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde adipisci, sed soluta laboriosam blanditiis rerum ipsum maxime.
         </div>
-        <form action="" method="post" id="question_options">
-            <label>
-                <input type="radio" name="submission"> Option 1 Lorem ipsum dolor sit amet
-            </label>
-            <label>
-                <input type="radio" name="submission"> Option 2 Lorem ipsum dolor sit amet
-            </label>
-            <label>
-                <input type="radio" name="submission"> Option 3 Lorem ipsum dolor sit amet
-            </label>
-            <label>
-                <input type="radio" name="submission"> Option 4 Lorem ipsum dolor sit amet
-            </label>
-        </form>
+        <form action="" method="post" id="question_options" />
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
